Add GET, PUT, POST, DELETE and get all notification routes and controllers placeholder
